deploy/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: postgres
      app: greetings-app
  template:
    metadata:
      labels:
        app: greetings-app
        name: postgres
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: greetings-app
    name: postgres
  ports:
    - port: 5432
      targetPort: 5432
