deploy/webapp-internalService.yaml
apiVersion: v1
kind: Service
metadata:
  name: greetings-app-service
  labels:
    name: greetings-app-service
    project: greetings-app
spec:
  ports:
    - port: 4567
      targetPort: 4567
      protocol: TCP
  selector:
    name: greetings-app-pod
    app: greetings-app
