deploy/webapp-nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: greetings-app-service
  labels:
    name: greetings-app-service
    project: greetings-app
spec:
  type: NodePort
  ports:
    - port: 4567
      targetPort: 4567
      nodePort: 30010
  selector:
    name: greetings-app-pod
    app: greetings-app
